Add CIRCLE_BRANCH INSTED CURRENT

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - checkout
       - run:
           name: Show current branch
-          command:  echo ${CURRENT_BRANCH}
+          command:  echo ${CIRCLE_BRANCH}
       - restore_cache: 
           keys:
             - app-{{ checksum "package.json" }}
@@ -29,7 +29,7 @@ jobs:
       - checkout
       - run:
           name: Show current branch
-          command:  echo ${CURRENT_BRANCH}
+          command:  echo ${CIRCLE_BRANCH}
       - run:
           name: Install aws cli
           working_directory: /
@@ -48,9 +48,9 @@ jobs:
       - run:
           name: Deploy to AWS S3
           command: | 
-            if [ "${CURRENT_BRANCH}" == "master" ] then    
+            if [ "${CIRCLE_BRANCH}" == "master" ] then    
               aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_PRODUCTION} --delete
-            elif [ "${CURRENT_BRANCH}" == "stagin" ] then
+            elif [ "${CIRCLE_BRANCH}" == "stagin" ] then
               aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_STAGING} --delete
             else
               aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_DEV} --delete
@@ -63,7 +63,7 @@ jobs:
       - checkout
       - run:
           name: Show current branch
-          command:  echo ${CURRENT_BRANCH}
+          command:  echo ${CIRCLE_BRANCH}
       - run:
           name: Install aws cli
           working_directory: /
@@ -83,9 +83,9 @@ jobs:
           name: Deploy to AWS Cloudfront
           command: | 
             aws configure set preview.cloudfront
-            if [ "${CURRENT_BRANCH}" == "master" ] then    
+            if [ "${CIRCLE_BRANCH}" == "master" ] then    
               aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID_PRODUCTION} --paths /\*
-            elif [ "${CURRENT_BRANCH}" == "stagin" ] then
+            elif [ "${CIRCLE_BRANCH}" == "stagin" ] then
               aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID_STAGING} --paths /\*              
             else
               aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID_DEV} --paths /\*             
@@ -95,7 +95,7 @@ worflows:
   build and deploy:
     jobs:
       - build
-      - deploy-to-aws-s3
+      - deploy-to-aws-s3:  
           requires:
             - build 
           filters:
@@ -104,8 +104,9 @@ worflows:
                 - develop
                 - staging
                 - master  
-      - deploy-to-aws-cloudfront 
+      - deploy-to-aws-cloudfront:  
           requires:
+            - build 
             - deploy-to-aws-s3 
           filters:
             branches: 
