--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
           command: | 
             if [ "${CIRCLE_BRANCH}" == "master" ] then    
               aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_PRODUCTION} --delete
-            elif [ "${CIRCLE_BRANCH}" == "stagin" ] then
+            elseif [ "${CIRCLE_BRANCH}" == "stagin" ] then
               aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_STAGING} --delete
             else
               aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_DEV} --delete
@@ -85,7 +85,7 @@ jobs:
             aws configure set preview.cloudfront
             if [ "${CIRCLE_BRANCH}" == "master" ] then    
               aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID_PRODUCTION} --paths /\*
-            elif [ "${CIRCLE_BRANCH}" == "stagin" ] then
+            elseif [ "${CIRCLE_BRANCH}" == "stagin" ] then
               aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID_STAGING} --paths /\*              
             else
               aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID_DEV} --paths /\*             
