adding ; to else if

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,9 +48,9 @@ jobs:
       - run:
           name: Deploy to AWS S3
           command: | 
-            if [ "${CIRCLE_BRANCH}" == "master" ] then    
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then    
               aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_PRODUCTION} --delete
-            elseif [ "${CIRCLE_BRANCH}" == "stagin" ] then
+            elif [ "${CIRCLE_BRANCH}" == "stagin" ]; then
               aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_STAGING} --delete
             else
               aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_DEV} --delete
@@ -83,9 +83,9 @@ jobs:
           name: Deploy to AWS Cloudfront
           command: | 
             aws configure set preview.cloudfront
-            if [ "${CIRCLE_BRANCH}" == "master" ] then    
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then    
               aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID_PRODUCTION} --paths /\*
-            elseif [ "${CIRCLE_BRANCH}" == "stagin" ] then
+            elif [ "${CIRCLE_BRANCH}" == "stagin" ]; then
               aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID_STAGING} --paths /\*              
             else
               aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID_DEV} --paths /\*             
