--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,95 +1,95 @@
 version: 2.1
+executors:
+  app-executor:
+    docker:
+      - image: circleci/node:14.16.1
+    working_directory: ~/repo
+
+aliases:
+  - &show-current-branch-name
+    run:
+      name: Show current branch
+      command:  echo ${CIRCLE_BRANCH}
+  - &restore-cache
+    restore_cache: 
+      keys:
+        - app-{{ checksum "package.json" }}
+        - app-
+  - &install-dependencies
+    run:
+      name: Install dependencies
+      command:  npm install
+  - &save-cache
+    save_cache:
+      paths: 
+        - node_modules
+      key: app-{{ checksum "package.json" }} 
+  - &build-project
+    run:
+      name: Build Project
+      command: | 
+        npm install
+        npm run build    
+        cd build
+        zip ../build.zip -r * .[^]*
+        echo "build successful"
+  - &install-awscli
+    run:
+      name: Install aws cli
+      working_directory: /
+      command: | 
+        sudo apt-get -y -qq update
+        sudo apt-get install -y awscli
+        sudo apt-get install -y python-pip python-dev build-essential
+  - &deploy-to-s3
+    run:
+      name: Deploy to AWS S3
+      command: | 
+        if [ "${CIRCLE_BRANCH}" == "master" ]; then    
+          aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_PRODUCTION} --delete
+        elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
+          aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_STAGING} --delete
+        else
+          aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_DEV} --delete
+        fi
+  - &deploy-to-cloudfront
+    run:
+      name: Deploy to AWS Cloudfront
+      command: | 
+        aws configure set preview.cloudfront true
+        if [ "${CIRCLE_BRANCH}" == "master" ]; then    
+          aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID_PRODUCTION} --paths /\*
+        elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
+          aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID_STAGING} --paths /\*              
+        else
+          aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID_DEV} --paths /\*             
+        fi
 
 jobs:
   build:
-    docker:
-      - image: circleci/node:14.16.1
-    working_directory: ~/repo
+    executor: app-executor
     steps:
       - checkout
-      - run:
-          name: Show current branch
-          command:  echo ${CIRCLE_BRANCH}
-      - restore_cache: 
-          keys:
-            - app-{{ checksum "package.json" }}
-            - app-
-      - run:
-          name: Install dependencies
-          command:  npm install
-      - save_cache:
-          paths: 
-            - node_modules
-          key: app-{{ checksum "package.json" }} 
+      - *show-current-branch-name
+      - *restore-cache
+      - *install-dependencies
+      - *save-cache
   deploy-to-aws-s3:
-    docker:
-      - image: circleci/node:14.16.1
-    working_directory: ~/repo
+    executor: app-executor
     steps:
       - checkout
-      - run:
-          name: Show current branch
-          command:  echo ${CIRCLE_BRANCH}
-      - run:
-          name: Install aws cli
-          working_directory: /
-          command: | 
-            sudo apt-get -y -qq update
-            sudo apt-get install -y awscli
-            sudo apt-get install -y python-pip python-dev build-essential
-      - run:
-          name: Buil Project
-          command: | 
-            npm install
-            npm run build    
-            cd build
-            zip ../build.zip -r * .[^]*
-            echo "build successful" 
-      - run:
-          name: Deploy to AWS S3
-          command: | 
-            if [ "${CIRCLE_BRANCH}" == "master" ]; then    
-              aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_PRODUCTION} --delete
-            elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
-              aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_STAGING} --delete
-            else
-              aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_DEV} --delete
-            fi
+      - *show-current-branch-name
+      - *install-awscli
+      - *build-project
+      - *deploy-to-s3
   deploy-to-aws-cloudfront:
-    docker:
-      - image: circleci/node:14.16.1
-    working_directory: ~/repo
+    executor: app-executor
     steps:
       - checkout
-      - run:
-          name: Show current branch
-          command:  echo ${CIRCLE_BRANCH}
-      - run:
-          name: Install aws cli
-          working_directory: /
-          command: | 
-            sudo apt-get -y -qq update
-            sudo apt-get install -y awscli
-            sudo apt-get install -y python-pip python-dev build-essential
-      - run:
-          name: Buil Project
-          command: | 
-            npm install
-            npm run build    
-            cd build
-            zip ../build.zip -r * .[^]*
-            echo "build successful" 
-      - run:
-          name: Deploy to AWS Cloudfront
-          command: | 
-            aws configure set preview.cloudfront true
-            if [ "${CIRCLE_BRANCH}" == "master" ]; then    
-              aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID_PRODUCTION} --paths /\*
-            elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
-              aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID_STAGING} --paths /\*              
-            else
-              aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID_DEV} --paths /\*             
-            fi
+      - *show-current-branch-name
+      - *install-awscli
+      - *build-project
+      - *deploy-to-cloudfront
 
 workflows:
   build and deploy:
