--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,6 +74,15 @@ jobs:
       - *restore-cache
       - *install-dependencies
       - *save-cache
+  linting:
+    executor: app-executor
+    steps:
+      - checkout
+      - *show-current-branch-name
+      - *restore-cache
+      - run: 
+        name: run eslint
+        command:  npm run lint
   deploy-to-aws-s3:
     executor: app-executor
     steps:
@@ -95,9 +104,18 @@ workflows:
   build and deploy:
     jobs:
       - build
-      - deploy-to-aws-s3:  
+      - linting:
           requires:
             - build 
+          filters:
+            branches: 
+              only: 
+                - develop
+                - staging
+                - master 
+      - deploy-to-aws-s3:  
+          requires:
+            - linting 
           filters:
             branches: 
               only: 
