--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,6 +86,16 @@ jobs:
           name: Run eslint
           command: npm run lint
 
+  prettier:
+    executor: app-executor
+    steps:
+      - checkout
+      - *show-current-branch-name
+      - *restore-cache
+      - run: 
+          name: Run prettier check
+          command: npm run prettier:check
+
   deploy-to-aws-s3:
     executor: app-executor
     steps:
@@ -117,9 +127,19 @@ workflows:
                 - develop
                 - staging
                 - master 
+      - prettier:
+          requires:
+            - build 
+          filters:
+            branches: 
+              only: 
+                - develop
+                - staging
+                - master 
       - deploy-to-aws-s3:  
           requires:
             - linting 
+            - prettier
           filters:
             branches: 
               only: 
