--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,11 +32,12 @@
         "no-shadow": "off",
         "@typescript-eslint/no-shadow": ["error"],
         "@typescript-eslint/explicit-function-return-type": ["error",{"allowExpressions": true}],
-        "max-len": ["warn", { "code": 80 }],
+        // "max-len": ["warn", { "code": 80 }],
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
         "import/prefer-default-export": "off",
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "comma-dangle": ["error", "never"]
     },
     "settings": {
         "import/resolver": {
