--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,15 @@
+orbs:
+  slack: circleci/slack@3.4.2
 version: 2.1
 executors:
   app-executor:
     docker:
       - image: circleci/node:14.16.1
     working_directory: ~/repo
+  slack-executor:
+    docker:
+      - image: 'cibuilds/base:latest'
+    resource_class: small
 
 aliases:
   - &show-current-branch-name
@@ -114,6 +120,18 @@ jobs:
       - *build-project
       - *deploy-to-cloudfront
 
+  notify-via-slack:
+    executor: slack-executor
+    steps:
+      - slack/notify:
+          message: "${CIRCLE_BRANCH} branch deployment to aws s3 and cloudfront is complete"
+          webhook: $CIRCLECI_SLACK_WEBHOOK
+      - slack/status:
+          webhook: $CIRCLECI_SLACK_WEBHOOK
+
+      
+      
+
 workflows:
   build and deploy:
     jobs:
@@ -149,6 +167,15 @@ workflows:
       - deploy-to-aws-cloudfront:  
           requires:
             - deploy-to-aws-s3 
+          filters:
+            branches: 
+              only: 
+                - develop
+                - staging
+                - master  
+      - notify-via-slack:  
+          requires:
+            - deploy-to-aws-cloudfront 
           filters:
             branches: 
               only: 
