add color to notifications

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,6 +126,7 @@ jobs:
       - slack/notify:
           message: "${CIRCLE_BRANCH} branch deployment to aws s3 and cloudfront is complete"
           webhook: $CIRCLECI_SLACK_WEBHOOK
+          color: '#42e2f4'
       - slack/status:
           webhook: $CIRCLECI_SLACK_WEBHOOK
 
